<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pokemon Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Randomly choose pokemon for each contact or do a custom selection</string>
    <string name="button_random">Random</string>
    <string name="button_custom">Custom</string>
    <string name="selectGenerationView_options">Select which generation of Pokemon you want to include</string>
    <string name="option_g1">Red and Blue</string>
    <string name="option_g2">Gold and Silver</string>
    <string name="option_g3">Ruby and Sapphire</string>
    <string name="option_g4">Diamond and Pearl</string>
    <string name="option_g5">Black and White</string>
    <string name="option_gX">Custom Image Screenshots</string>
    <string name="alterative_option">OR</string>
    
    
    <string name="welcome_title">welcome</string>
    <string name="welcome_body">first before you start changing contact images, you should backup existing images in case you dont\'t like pokemon and cute kittens anymore</string>
    <string name="welcome_confirm">press next to start a backup to internal memory</string>
    <string name="welcome_button_text">next</string>

</resources>