<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WelcomeScreen" >

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/welcome_title"
        android:textColor="@android:color/darker_gray"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/welcome_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/welcome_body"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:textAlignment="gravity" />

    <TextView
        android:id="@+id/welcome_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_body"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/welcome_confirm"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

    <Button
        android:id="@+id/welcome_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_confirm"
        android:background="@drawable/button_random_background"
        android:onClick="actionContinue"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_button_text"
        android:textColor="@android:color/background_light" />

</RelativeLayout>